[package]
authors = ["Determinant <tederminant@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "cessna-knobox"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
cortex-m-rtic = "0.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
nb = "0.1.2"
embedded-hal = "0.2.3"
heapless = "0.5.1"
rand_core = "0.4"
usb-device = "0.2.4"

[dependencies.stm32f1]
version = "0.8.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["stm32f103", "rt", "stm32-usbd"]

[[bin]]
name ="cessna-knobox"
path = "src/app.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
